--- a/styles/sass/layout/_header.scss
+++ b/styles/sass/layout/_header.scss
@@ -1543,6 +1543,7 @@
 	height: 100vh;
 	width: 300px;
 	background: #243352;
+	//background-color: white;
 	transition: all 0.3s ease 0s;
 	box-shadow: 0px 10px 40px 0px rgba(50, 50, 50, 0.1);
 	overflow-x: auto;
