--- a/styles/sass/components/_page-title.scss
+++ b/styles/sass/components/_page-title.scss
@@ -1,9 +1,9 @@
 
 
 .wpo-page-title{
-    background: url(/images/page-title.jpg) no-repeat center top / cover;
+    background: url('https://raneemskin.nl/wp-content/uploads/2021/10/cosmetics-page-title.jpg') no-repeat center top / cover;
     min-height: 400px;
-    position: relative;
+     position: relative;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -19,7 +19,7 @@
 		top: 0;
 		width: 100%;
 		height: 100%;
-		background: $theme-primary-color;
+		// background: $theme-primary-color;
 		content: "";
 		z-index: -1;
 		opacity: .60;
