--- a/styles/sass/page/_blog-single.scss
+++ b/styles/sass/page/_blog-single.scss
@@ -668,3 +668,73 @@
 		}
 	}
 }
+
+
+
+// -------------sliders--------
+
+
+// .slider-countries {
+
+//     .slick-arrow {
+//         height: 44px;
+//         width: 42px;
+//         border-radius: 8px;
+//         border: 1px solid #B5B5B5;
+//         box-shadow: none;
+//         background: transparent;
+//         @media (max-width: 576px) {
+//             height: 42px;
+//         }
+
+//         &::before {
+//             color: #B5B5B5
+//         }
+//         &:hover {
+//             // border: 1px solid blue;
+//             // background: #B5B5B5;
+//             &::before {
+//                 color: #333;
+//             }
+//         }
+
+//         &.slick-next {
+//             // right: 25px;
+//             left: 88px !important;
+//             top:-12% ;
+//             @media (max-width: 576px) {
+//                 right: 10px;
+//             }
+//         }
+//         &.slick-prev {
+//             left: 25px;
+//             top:-12% ;
+//             @media (max-width: 576px) {
+//                 left: 10px;
+//             }
+//         }
+//     }
+
+
+    
+//     .slick-prev:hover,
+//     .slick-prev:focus,
+//     .slick-next:hover,
+//     .slick-next:focus {
+//         border: 1px solid blue;
+//         //  background: var(--color-primary);
+//         color: #481b6d;
+
+//         // -------arrrrow------
+//         &::before {
+//             color: blue;
+//             // color: #fff;
+//         }
+//     }
+    
+
+
+
+
+
+// }
