contact us page sstart work

--- a/styles/sass/layout/_header.scss
+++ b/styles/sass/layout/_header.scss
@@ -6,7 +6,8 @@
 /*-- 2.1 topbar --*/
 
 .topbar {
-	background: $dark-gray;
+	background: black;
+	// background:$dark-gray;
 }
 
 @media (max-width: 991px) {
