add color in hero

--- a/styles/sass/layout/_hero-slider.scss
+++ b/styles/sass/layout/_hero-slider.scss
@@ -416,7 +416,7 @@ hero slider
 			font-weight: 900;
 			line-height: 90px;
 			margin: 10px 0 25px;
-			color: $white;
+			color: #d2b36a !important;   //$white;
 
 			@include media-query(1199px) {
 				font-size: 50px;
