--- a/styles/sass/layout/_hero-slider.scss
+++ b/styles/sass/layout/_hero-slider.scss
@@ -482,7 +482,7 @@ hero slider
 		background-color: #d2b36a !important;
 
 		&:hover {
-			background-color: black !important;
+			color: black !important;
 		}
 
 	}
