--- a/styles/sass/layout/_hero-slider.scss
+++ b/styles/sass/layout/_hero-slider.scss
@@ -323,6 +323,12 @@ hero slider
 
 		.slide-content {
 			padding-bottom: 70px;
+			transition: all .35s ease-in-out;
+
+			&:hover {
+				transform: translate(20px, 20px);
+			}
+
 
 			@media(max-width:991px) {
 				padding-bottom: 0;
