--- a/styles/sass/layout/_footer.scss
+++ b/styles/sass/layout/_footer.scss
@@ -164,6 +164,7 @@
         }
 
         ul{
+            list-style-type:square;
             li{
                 position: relative;
                 a{
