--- a/styles/sass/components/_page-title.scss
+++ b/styles/sass/components/_page-title.scss
@@ -1,17 +1,22 @@
 
 
 .wpo-page-title{
-    background: url('https://raneemskin.nl/wp-content/uploads/2021/10/cosmetics-page-title.jpg') no-repeat center top / cover;
+    // background: url('https://raneemskin.nl/wp-content/uploads/2021/10/cosmetics-page-title.jpg') no-repeat center top / cover;
     min-height: 400px;
      position: relative;
     display: flex;
     justify-content: center;
     flex-direction: column;
     z-index: 1;
+	background-repeat:no-repeat;
+	background-position: center;
+	background-size: cover;
+	
 
 	@media(max-width: 767px) {
 		min-height: 250px;
 	}
+
 
 	&:before{
 		position: absolute;
@@ -29,7 +34,7 @@
 
 		h2{
 			font-size: 60px;
-			color: #fff;
+			color:  black;// #fff;
 			line-height: 60px;
 			margin-top: -10px;
 			margin-bottom: 20px;
@@ -48,7 +53,7 @@
 			li{
 				display: inline-block;
 				padding: 0px 5px;
-				color: #fff;
+				color:  black;//#fff;
 				position: relative;
 				font-size: 20px;
 				font-family: $heading-font;
@@ -65,7 +70,7 @@
 
 				&:last-child{
 					span{
-						color: #cbd4fd;
+						color: black; //#cbd4fd;
 					}
 					&:after{
 						display: none;
@@ -73,7 +78,7 @@
 				}
 
 				a{
-					color: #fff;
+					color: black; // #fff;
 					font-size: 20px;
 					transition: all .3s;
 
